--- a/Views/Tasks/Index.cshtml
+++ b/Views/Tasks/Index.cshtml
@@ -1,7 +1,59 @@
+@model IEnumerable<family_hub_prototype.Models.Task>
+
 @{
-    ViewData["Title"] = "Tasks";
+    ViewData["Title"] = "Index";
 }
 
-<h2>Tasks</h2>
+<h1>Index</h1>
 
-<p>All tasks below here!</p>
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.TaskName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TaskDueDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TaskAssigneeId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TaskIsCompleted)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TaskCompletedDate)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.TaskName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TaskDueDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TaskAssigneeId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TaskIsCompleted)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TaskCompletedDate)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
